@@ -259,6 +259,9 @@
     <a href="javascript:redirectLink('{{=it.targetPane}}', '{{=it.address}}');">#{{=it.number}}</a>
 </script>
 
+<script id='tmpl_referenceLink' type='text/x-dot-template'>
+    <a href="javascript:lightBox('{{=it.original_filename}}', '{{=it.full_path}}');">{{=it.original_filename}}</a>
+</script>
 
 {% endraw %}
 
@@ -276,7 +279,6 @@
                 <div id='mebar'>
                     <div style='color: #000000' id='mebutton'></div>
                 </div>
-
             {% endblock %}
         </div>
 
@@ -323,6 +325,7 @@
     templates.departmentField = doT.template(document.getElementById('tmpl_departmentField').text);
     templates.groupField = doT.template(document.getElementById('tmpl_groupField').text);
     templates.ticketNameField = doT.template(document.getElementById('tmpl_ticketNameField').text);
+    templates.referenceLink = doT.template(document.getElementById('tmpl_referenceLink').text);
     // ************************************************************************
 
     var copyToClipboard = function (text) {
@@ -352,6 +355,12 @@
         var contentPane = dijit.byId(targetPane);
         contentPane.set('href', address);
         contentPane.refresh();
+    };
+
+    var lightBox = function(title, href){
+        var lb = new dojox.image.Lightbox({ title:title, href:href });
+        lb.startup();
+        lb.show();
     };
 
     require([
